<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainParent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/whitet">
    
    <LinearLayout
	    android:id="@+id/header"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:paddingTop="10dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
    	android:orientation="vertical" >
        
        <TextView
			 android:id="@+id/headerText"
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:text="@string/login"
		     android:textColor="@color/grey999"
		     android:textSize="@dimen/text_size"
		     android:textAllCaps="true"
		     android:textStyle="bold"
		     android:visibility="gone" />
	    
	    <TextView
		     android:id="@+id/systemMessage"
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:textColor="@color/red"
		     android:textSize="@dimen/text_size_login_page"
		     android:textStyle="bold" />
	 </LinearLayout>
    
     <!-- =======================================LOGIN FORM===================================== -->
     <ScrollView 
	    android:id="@+id/ScrollView01"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:layout_below="@+id/header"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginBottom="20dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingBottom="10dp" 
		android:background="@drawable/customloginshape">
	  
		  <RelativeLayout
		    android:id="@+id/loginForm"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="left"
	      	android:orientation="vertical" >
	      	<TextView 
		        android:id="@+id/descr"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
	   			android:paddingLeft="10dp"
	   			android:paddingRight="10dp"
	   			android:textColor="@color/bobgrey"
		        android:text="@string/description"
	    		android:gravity="center"/>
		    
		    <EditText
		      android:id="@+id/phoneNumber"
		      android:layout_below="@id/descr"
		      android:layout_width="160dp"
		      android:layout_height="wrap_content"
	          android:layout_marginTop="10dp"
	          android:layout_marginRight="10dp"
		      android:hint="@string/phone_number"
		      android:textStyle="italic"
		      android:textSize="@dimen/text_size_login_page"
		      android:inputType="phone" />
		    
		    <Button
			    android:id="@+id/getCode"
			    android:layout_below="@id/descr"
			    android:layout_width="wrap_content"
			    android:layout_height="50dp"
	          	android:layout_toRightOf="@id/phoneNumber"
		    	android:layout_alignParentRight="true"
	          	android:layout_marginTop="10dp"
			    android:paddingTop="5dp"
			    android:paddingBottom="5dp"
			    android:paddingLeft="0dp"
			    android:paddingRight="0dp"
			    android:text="@string/get_code_sms"
		      	android:textStyle="italic"
			    android:textSize="@dimen/text_size_login_page"
			    android:textColor="@color/white"
			    android:background="@drawable/customgreenbuttonshapelogin"/>
		    
		    <EditText
		      android:id="@+id/verifyCode"
		      android:layout_width="300dp"
		      android:layout_height="wrap_content"
	          android:layout_below="@id/phoneNumber"
	          android:layout_marginTop="10dp"
		      android:hint="@string/enter_code"
		      android:textStyle="italic"
		      android:textSize="@dimen/text_size_login_page"
		      android:inputType="number"  />
		    
		   <Button
			    android:id="@+id/login"
			    android:layout_width="70dp"
			    android:layout_height="25dp"
	          	android:layout_below="@id/verifyCode"
	          	android:layout_marginTop="10dp"
			    android:paddingTop="5dp"
			    android:paddingBottom="5dp"
			    android:paddingLeft="5dp"
			    android:paddingRight="5dp"
			    android:text="@string/proceed_hint"
			    android:textSize="@dimen/text_size_login_page"
			    android:gravity="center"
			    android:textColor="@color/white"
			    android:layout_centerVertical="true"
			    android:layout_centerHorizontal="true"
			    android:background="@drawable/customsavebtnshapelogin"/>
		    
		</RelativeLayout>
	</ScrollView>
	  
     
    <include 
        android:id="@+id/progressbar_view" 
   		android:layout_width="fill_parent"
   		android:layout_height="fill_parent"
   		android:layout_alignParentTop="true"
   		android:visibility="gone"
        layout="@layout/global_progress_bar" />
 
</LinearLayout>